@@ -6604,11 +6604,14 @@ typedef struct _ACTIVATION_CONTEXT_COMPATIBILITY_INFORMATION {
   COMPATIBILITY_CONTEXT_ELEMENT Elements[];
 } ACTIVATION_CONTEXT_COMPATIBILITY_INFORMATION, *PACTIVATION_CONTEXT_COMPATIBILITY_INFORMATION;
 
+#ifndef ___PROCESSOR_NUMBER_DEFINED
+#define ___PROCESSOR_NUMBER_DEFINED
 typedef struct _PROCESSOR_NUMBER {
   WORD Group;
   BYTE Number;
   BYTE Reserved;
 } PROCESSOR_NUMBER, *PPROCESSOR_NUMBER;
+#endif /* !___PROCESSOR_NUMBER_DEFINED */
 
 typedef struct _PROCESSOR_GROUP_INFO {
   BYTE      MaximumProcessorCount;
@@ -6624,11 +6627,14 @@ typedef struct _GROUP_RELATIONSHIP {
   PROCESSOR_GROUP_INFO GroupInfo[];
 } GROUP_RELATIONSHIP, *PGROUP_RELATIONSHIP;
 
+#ifndef ___GROUP_AFFINITY_DEFINED
+#define ___GROUP_AFFINITY_DEFINED
 typedef struct _GROUP_AFFINITY {
   KAFFINITY Mask;
   WORD      Group;
   WORD      Reserved[3];
 } GROUP_AFFINITY, *PGROUP_AFFINITY;
+#endif /* !___GROUP_AFFINITY_DEFINED */
 
 typedef struct _CACHE_RELATIONSHIP {
   BYTE                 Level;
