@@ -1,5 +1,13 @@
 2012-07-06  Corinna Vinschen  <vinschen@redhat.com>
 
+	* ntdef.h (struct _PROCESSOR_NUMBER): Guard definition with
+	___PROCESSOR_NUMBER_DEFINED.
+	(struct _GROUP_AFFINITY): Guard definition with
+	___GROUP_AFFINITY_DEFINED.
+	* winnt.h: Ditto.
+
+2012-07-06  Corinna Vinschen  <vinschen@redhat.com>
+
 	* in6addr.h (struct in6addr): Add u.__s6_addr32 member when
 	building Cygwin.
 	(s6_addr32): Define when building Cygwin.
